# rtl8821au

./: .cache.mk  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  dkms-install.sh  dkms-remove.sh  dkms.conf  install.sh  uninstall.sh
core/: rtw_wlan_util.c
hal/btc/: HalBtc8812a2Ant.c  HalBtcOutSrc.h
hal/phydm/: phydm.c  phydm_hwconfig.c
hal/phydm/rtl8821a/: halhwimg8821a_fw.c
hal/rtl8812a/: hal8812a_fw.c  hal8812a_fw.h  hal8821a_fw.c  hal8821a_fw.h
include/: osdep_service_linux.h  rtl8188e_hal.h  wifi.h
os_dep/: osdep_service.c  osdep_service.o.ur-safe
os_dep/linux/: ioctl_cfg80211.c  os_intfs.c  usb_intf.c
scripts/: dkms_conf.sh  dkms_test.sh  failure.sh  kernels.sh
