cmake_minimum_required(VERSION 3.9)
project(rtl8821AU_WiFi_linux_v5_2_6_2_23547_20170814_COEX20170206_6760 C)

set(CMAKE_C_STANDARD 11)

include_directories(hal)
include_directories(hal/btc)
include_directories(hal/efuse)
include_directories(hal/efuse/rtl8812a)
include_directories(hal/phydm)
include_directories(hal/phydm/rtl8812a)
include_directories(hal/phydm/rtl8821a)
include_directories(hal/phydm/txbf)
include_directories(hal/rtl8812a)
include_directories(include)
include_directories(include/byteorder)
include_directories(include/linux)
include_directories(os_dep/linux)
include_directories(platform)

add_executable(rtl8821AU_WiFi_linux_v5_2_6_2_23547_20170814_COEX20170206_6760
        core/efuse/rtw_efuse.c
        core/rtw_ap.c
        core/rtw_beamforming.c
        core/rtw_br_ext.c
        core/rtw_bt_mp.c
        core/rtw_btcoex.c
        core/rtw_btcoex_wifionly.c
        core/rtw_cmd.c
        core/rtw_debug.c
        core/rtw_eeprom.c
        core/rtw_ieee80211.c
        core/rtw_io.c
        core/rtw_ioctl_query.c
        core/rtw_ioctl_rtl.c
        core/rtw_ioctl_set.c
        core/rtw_iol.c
        core/rtw_mem.c
        core/rtw_mi.c
        core/rtw_mlme.c
        core/rtw_mlme_ext.c
        core/rtw_mp.c
        core/rtw_mp_ioctl.c
        core/rtw_odm.c
        core/rtw_p2p.c
        core/rtw_pwrctrl.c
        core/rtw_recv.c
        core/rtw_rf.c
        core/rtw_sdio.c
        core/rtw_security.c
        core/rtw_sreset.c
        core/rtw_sta_mgt.c
        core/rtw_tdls.c
        core/rtw_vht.c
        core/rtw_wapi.c
        core/rtw_wapi_sms4.c
        core/rtw_wlan_util.c
        core/rtw_xmit.c
        hal/btc/halbtc8192e1ant.c
        hal/btc/halbtc8192e1ant.h
        hal/btc/halbtc8192e2ant.c
        hal/btc/halbtc8192e2ant.h
        hal/btc/halbtc8703b1ant.c
        hal/btc/halbtc8703b1ant.h
        hal/btc/halbtc8723b1ant.c
        hal/btc/halbtc8723b1ant.h
        hal/btc/halbtc8723b2ant.c
        hal/btc/halbtc8723b2ant.h
        hal/btc/halbtc8723bwifionly.c
        hal/btc/halbtc8723bwifionly.h
        hal/btc/halbtc8723d1ant.c
        hal/btc/halbtc8723d1ant.h
        hal/btc/halbtc8723d2ant.c
        hal/btc/halbtc8723d2ant.h
        hal/btc/halbtc8812a1ant.c
        hal/btc/halbtc8812a1ant.h
        hal/btc/halbtc8812a2ant.c
        hal/btc/halbtc8812a2ant.h
        hal/btc/halbtc8821a1ant.c
        hal/btc/halbtc8821a1ant.h
        hal/btc/halbtc8821a2ant.c
        hal/btc/halbtc8821a2ant.h
        hal/btc/halbtc8821c1ant.c
        hal/btc/halbtc8821c1ant.h
        hal/btc/halbtc8821c2ant.c
        hal/btc/halbtc8821c2ant.h
        hal/btc/halbtc8821cwifionly.c
        hal/btc/halbtc8821cwifionly.h
        hal/btc/halbtc8822b1ant.c
        hal/btc/halbtc8822b1ant.h
        hal/btc/halbtc8822b2ant.c
        hal/btc/halbtc8822b2ant.h
        hal/btc/halbtc8822bwifionly.c
        hal/btc/halbtc8822bwifionly.h
        hal/btc/halbtcoutsrc.h
        hal/btc/mp_precomp.h
        hal/efuse/rtl8812a/HalEfuseMask8812A_PCIE.c
        hal/efuse/rtl8812a/HalEfuseMask8812A_PCIE.h
        hal/efuse/rtl8812a/HalEfuseMask8812A_USB.c
        hal/efuse/rtl8812a/HalEfuseMask8812A_USB.h
        hal/efuse/rtl8812a/HalEfuseMask8821A_PCIE.c
        hal/efuse/rtl8812a/HalEfuseMask8821A_PCIE.h
        hal/efuse/rtl8812a/HalEfuseMask8821A_SDIO.c
        hal/efuse/rtl8812a/HalEfuseMask8821A_SDIO.h
        hal/efuse/rtl8812a/HalEfuseMask8821A_USB.c
        hal/efuse/rtl8812a/HalEfuseMask8821A_USB.h
        hal/efuse/efuse_mask.h
        hal/hal_hci/hal_usb.c
        hal/led/hal_usb_led.c
        hal/phydm/rtl8812a/halhwimg8812a_bb.c
        hal/phydm/rtl8812a/halhwimg8812a_bb.h
        hal/phydm/rtl8812a/halhwimg8812a_fw.c
        hal/phydm/rtl8812a/halhwimg8812a_fw.h
        hal/phydm/rtl8812a/halhwimg8812a_mac.c
        hal/phydm/rtl8812a/halhwimg8812a_mac.h
        hal/phydm/rtl8812a/halhwimg8812a_rf.c
        hal/phydm/rtl8812a/halhwimg8812a_rf.h
        hal/phydm/rtl8812a/halphyrf_8812a_ap.c
        hal/phydm/rtl8812a/halphyrf_8812a_ap.h
        hal/phydm/rtl8812a/halphyrf_8812a_ce.c
        hal/phydm/rtl8812a/halphyrf_8812a_ce.h
        hal/phydm/rtl8812a/halphyrf_8812a_win.c
        hal/phydm/rtl8812a/halphyrf_8812a_win.h
        hal/phydm/rtl8812a/phydm_regconfig8812a.c
        hal/phydm/rtl8812a/phydm_regconfig8812a.h
        hal/phydm/rtl8812a/phydm_rtl8812a.c
        hal/phydm/rtl8812a/phydm_rtl8812a.h
        hal/phydm/rtl8812a/version_rtl8812a.h
        hal/phydm/rtl8821a/halhwimg8821a_bb.c
        hal/phydm/rtl8821a/halhwimg8821a_bb.h
        hal/phydm/rtl8821a/halhwimg8821a_fw.c
        hal/phydm/rtl8821a/halhwimg8821a_fw.h
        hal/phydm/rtl8821a/halhwimg8821a_mac.c
        hal/phydm/rtl8821a/halhwimg8821a_mac.h
        hal/phydm/rtl8821a/halhwimg8821a_rf.c
        hal/phydm/rtl8821a/halhwimg8821a_rf.h
        hal/phydm/rtl8821a/halphyrf_8821a_ce.c
        hal/phydm/rtl8821a/halphyrf_8821a_ce.h
        hal/phydm/rtl8821a/halphyrf_8821a_win.c
        hal/phydm/rtl8821a/halphyrf_8821a_win.h
        hal/phydm/rtl8821a/phydm_iqk_8821a_ap.c
        hal/phydm/rtl8821a/phydm_iqk_8821a_ap.h
        hal/phydm/rtl8821a/phydm_iqk_8821a_ce.c
        hal/phydm/rtl8821a/phydm_iqk_8821a_ce.h
        hal/phydm/rtl8821a/phydm_iqk_8821a_win.c
        hal/phydm/rtl8821a/phydm_iqk_8821a_win.h
        hal/phydm/rtl8821a/phydm_regconfig8821a.c
        hal/phydm/rtl8821a/phydm_regconfig8821a.h
        hal/phydm/rtl8821a/phydm_rtl8821a.c
        hal/phydm/rtl8821a/phydm_rtl8821a.h
        hal/phydm/rtl8821a/version_rtl8821a.h
        hal/phydm/txbf/halcomtxbf.c
        hal/phydm/txbf/halcomtxbf.h
        hal/phydm/txbf/haltxbf8192e.c
        hal/phydm/txbf/haltxbf8192e.h
        hal/phydm/txbf/haltxbf8814a.c
        hal/phydm/txbf/haltxbf8814a.h
        hal/phydm/txbf/haltxbf8822b.c
        hal/phydm/txbf/haltxbf8822b.h
        hal/phydm/txbf/haltxbfinterface.c
        hal/phydm/txbf/haltxbfinterface.h
        hal/phydm/txbf/haltxbfjaguar.c
        hal/phydm/txbf/haltxbfjaguar.h
        hal/phydm/txbf/phydm_hal_txbf_api.c
        hal/phydm/txbf/phydm_hal_txbf_api.h
        hal/phydm/halhwimg.h
        hal/phydm/halphyrf_ap.c
        hal/phydm/halphyrf_ap.h
        hal/phydm/halphyrf_ce.c
        hal/phydm/halphyrf_ce.h
        hal/phydm/halphyrf_win.c
        hal/phydm/halphyrf_win.h
        hal/phydm/mp_precomp.h
        hal/phydm/phydm.c
        hal/phydm/phydm.h
        hal/phydm/phydm_acs.c
        hal/phydm/phydm_acs.h
        hal/phydm/phydm_adaptivity.c
        hal/phydm/phydm_adaptivity.h
        hal/phydm/phydm_adc_sampling.c
        hal/phydm/phydm_adc_sampling.h
        hal/phydm/phydm_antdect.c
        hal/phydm/phydm_antdect.h
        hal/phydm/phydm_antdiv.c
        hal/phydm/phydm_antdiv.h
        hal/phydm/phydm_beamforming.c
        hal/phydm/phydm_beamforming.h
        hal/phydm/phydm_ccx.c
        hal/phydm/phydm_ccx.h
        hal/phydm/phydm_cfotracking.c
        hal/phydm/phydm_cfotracking.h
        hal/phydm/phydm_debug.c
        hal/phydm/phydm_debug.h
        hal/phydm/phydm_dfs.c
        hal/phydm/phydm_dfs.h
        hal/phydm/phydm_dig.c
        hal/phydm/phydm_dig.h
        hal/phydm/phydm_dynamic_rx_path.c
        hal/phydm/phydm_dynamic_rx_path.h
        hal/phydm/phydm_dynamicbbpowersaving.c
        hal/phydm/phydm_dynamicbbpowersaving.h
        hal/phydm/phydm_dynamictxpower.c
        hal/phydm/phydm_dynamictxpower.h
        hal/phydm/phydm_edcaturbocheck.c
        hal/phydm/phydm_edcaturbocheck.h
        hal/phydm/phydm_features.h
        hal/phydm/phydm_hwconfig.c
        hal/phydm/phydm_hwconfig.h
        hal/phydm/phydm_interface.c
        hal/phydm/phydm_interface.h
        hal/phydm/phydm_iqk.h
        hal/phydm/phydm_kfree.c
        hal/phydm/phydm_kfree.h
        hal/phydm/phydm_noisemonitor.c
        hal/phydm/phydm_noisemonitor.h
        hal/phydm/phydm_pathdiv.c
        hal/phydm/phydm_pathdiv.h
        hal/phydm/phydm_powertracking_ap.c
        hal/phydm/phydm_powertracking_ap.h
        hal/phydm/phydm_powertracking_ce.c
        hal/phydm/phydm_powertracking_ce.h
        hal/phydm/phydm_powertracking_win.c
        hal/phydm/phydm_powertracking_win.h
        hal/phydm/phydm_pre_define.h
        hal/phydm/phydm_precomp.h
        hal/phydm/phydm_psd.c
        hal/phydm/phydm_psd.h
        hal/phydm/phydm_rainfo.c
        hal/phydm/phydm_rainfo.h
        hal/phydm/phydm_reg.h
        hal/phydm/phydm_regdefine11ac.h
        hal/phydm/phydm_regdefine11n.h
        hal/phydm/phydm_types.h
        hal/phydm/rtchnlplan.c
        hal/phydm/rtchnlplan.h
        hal/rtl8812a/usb/rtl8812au_led.c
        hal/rtl8812a/usb/rtl8812au_recv.c
        hal/rtl8812a/usb/rtl8812au_xmit.c
        hal/rtl8812a/usb/usb_halinit.c
        hal/rtl8812a/usb/usb_ops_linux.c
        hal/rtl8812a/hal8812a_fw.c
        hal/rtl8812a/hal8812a_fw.h
        hal/rtl8812a/Hal8812PwrSeq.c
        hal/rtl8812a/hal8821a_fw.c
        hal/rtl8812a/hal8821a_fw.h
        hal/rtl8812a/Hal8821APwrSeq.c
        hal/rtl8812a/rtl8812a_cmd.c
        hal/rtl8812a/rtl8812a_dm.c
        hal/rtl8812a/rtl8812a_hal_init.c
        hal/rtl8812a/rtl8812a_phycfg.c
        hal/rtl8812a/rtl8812a_rf6052.c
        hal/rtl8812a/rtl8812a_rxdesc.c
        hal/rtl8812a/rtl8812a_sreset.c
        hal/rtl8812a/rtl8812a_xmit.c
        hal/hal_btcoex.c
        hal/hal_btcoex_wifionly.c
        hal/hal_com.c
        hal/hal_com_c2h.h
        hal/hal_com_phycfg.c
        hal/hal_dm.c
        hal/hal_dm.h
        hal/hal_halmac.c
        hal/hal_halmac.h
        hal/hal_intf.c
        hal/hal_mcc.c
        hal/hal_mp.c
        hal/hal_phy.c
        hal/HalPwrSeqCmd.c
        include/byteorder/big_endian.h
        include/byteorder/generic.h
        include/byteorder/little_endian.h
        include/byteorder/swab.h
        include/byteorder/swabb.h
        include/linux/wireless.h
        include/autoconf.h
        include/basic_types.h
        include/circ_buf.h
        include/cmd_osdep.h
        include/custom_gpio.h
        include/drv_conf.h
        include/drv_types.h
        include/drv_types_ce.h
        include/drv_types_gspi.h
        include/drv_types_linux.h
        include/drv_types_pci.h
        include/drv_types_sdio.h
        include/drv_types_xp.h
        include/ethernet.h
        include/gspi_hal.h
        include/gspi_ops.h
        include/gspi_ops_linux.h
        include/gspi_osintf.h
        include/h2clbk.h
        include/Hal8188EPhyCfg.h
        include/Hal8188EPhyReg.h
        include/Hal8188EPwrSeq.h
        include/Hal8188FPhyCfg.h
        include/Hal8188FPhyReg.h
        include/Hal8188FPwrSeq.h
        include/Hal8192EPhyCfg.h
        include/Hal8192EPhyReg.h
        include/Hal8192EPwrSeq.h
        include/Hal8703BPhyCfg.h
        include/Hal8703BPhyReg.h
        include/Hal8703BPwrSeq.h
        include/Hal8723BPhyCfg.h
        include/Hal8723BPhyReg.h
        include/Hal8723BPwrSeq.h
        include/Hal8723DPhyCfg.h
        include/Hal8723DPhyReg.h
        include/Hal8723DPwrSeq.h
        include/Hal8723PwrSeq.h
        include/Hal8812PhyCfg.h
        include/Hal8812PhyReg.h
        include/Hal8812PwrSeq.h
        include/Hal8814PhyCfg.h
        include/Hal8814PhyReg.h
        include/Hal8814PwrSeq.h
        include/Hal8821APwrSeq.h
        include/hal_btcoex.h
        include/hal_btcoex_wifionly.h
        include/hal_com.h
        include/hal_com_h2c.h
        include/hal_com_led.h
        include/hal_com_phycfg.h
        include/hal_com_reg.h
        include/hal_data.h
        include/hal_gspi.h
        include/hal_ic_cfg.h
        include/hal_intf.h
        include/hal_pg.h
        include/hal_phy.h
        include/hal_phy_reg.h
        include/hal_sdio.h
        include/HalPwrSeqCmd.h
        include/HalVerDef.h
        include/ieee80211.h
        include/ieee80211_ext.h
        include/if_ether.h
        include/ip.h
        include/mlme_osdep.h
        include/mp_custom_oid.h
        include/nic_spec.h
        include/osdep_intf.h
        include/osdep_service.h
        include/osdep_service_bsd.h
        include/osdep_service_ce.h
        include/osdep_service_linux.h
        include/osdep_service_xp.h
        include/pci_hal.h
        include/pci_ops.h
        include/pci_osintf.h
        include/recv_osdep.h
        include/rtl8188e_cmd.h
        include/rtl8188e_dm.h
        include/rtl8188e_hal.h
        include/rtl8188e_led.h
        include/rtl8188e_recv.h
        include/rtl8188e_rf.h
        include/rtl8188e_spec.h
        include/rtl8188e_sreset.h
        include/rtl8188e_xmit.h
        include/rtl8188f_cmd.h
        include/rtl8188f_dm.h
        include/rtl8188f_hal.h
        include/rtl8188f_led.h
        include/rtl8188f_recv.h
        include/rtl8188f_rf.h
        include/rtl8188f_spec.h
        include/rtl8188f_sreset.h
        include/rtl8188f_xmit.h
        include/rtl8192e_cmd.h
        include/rtl8192e_dm.h
        include/rtl8192e_hal.h
        include/rtl8192e_led.h
        include/rtl8192e_recv.h
        include/rtl8192e_rf.h
        include/rtl8192e_spec.h
        include/rtl8192e_sreset.h
        include/rtl8192e_xmit.h
        include/rtl8703b_cmd.h
        include/rtl8703b_dm.h
        include/rtl8703b_hal.h
        include/rtl8703b_led.h
        include/rtl8703b_recv.h
        include/rtl8703b_rf.h
        include/rtl8703b_spec.h
        include/rtl8703b_sreset.h
        include/rtl8703b_xmit.h
        include/rtl8723b_cmd.h
        include/rtl8723b_dm.h
        include/rtl8723b_hal.h
        include/rtl8723b_led.h
        include/rtl8723b_recv.h
        include/rtl8723b_rf.h
        include/rtl8723b_spec.h
        include/rtl8723b_sreset.h
        include/rtl8723b_xmit.h
        include/rtl8723d_cmd.h
        include/rtl8723d_dm.h
        include/rtl8723d_hal.h
        include/rtl8723d_led.h
        include/rtl8723d_lps_poff.h
        include/rtl8723d_recv.h
        include/rtl8723d_rf.h
        include/rtl8723d_spec.h
        include/rtl8723d_sreset.h
        include/rtl8723d_xmit.h
        include/rtl8812a_cmd.h
        include/rtl8812a_dm.h
        include/rtl8812a_hal.h
        include/rtl8812a_led.h
        include/rtl8812a_recv.h
        include/rtl8812a_rf.h
        include/rtl8812a_spec.h
        include/rtl8812a_sreset.h
        include/rtl8812a_xmit.h
        include/rtl8814a_cmd.h
        include/rtl8814a_dm.h
        include/rtl8814a_hal.h
        include/rtl8814a_led.h
        include/rtl8814a_recv.h
        include/rtl8814a_rf.h
        include/rtl8814a_spec.h
        include/rtl8814a_sreset.h
        include/rtl8814a_xmit.h
        include/rtl8821a_spec.h
        include/rtl8821a_xmit.h
        include/rtl8821c_dm.h
        include/rtl8821c_hal.h
        include/rtl8821c_spec.h
        include/rtl8821ce_hal.h
        include/rtl8821cs_hal.h
        include/rtl8821cu_hal.h
        include/rtl8822b_hal.h
        include/rtl8822be_hal.h
        include/rtl8822bs_hal.h
        include/rtl8822bu_hal.h
        include/rtw_android.h
        include/rtw_ap.h
        include/rtw_beamforming.h
        include/rtw_br_ext.h
        include/rtw_bt_mp.h
        include/rtw_btcoex.h
        include/rtw_btcoex_wifionly.h
        include/rtw_byteorder.h
        include/rtw_cmd.h
        include/rtw_debug.h
        include/rtw_eeprom.h
        include/rtw_efuse.h
        include/rtw_event.h
        include/rtw_ht.h
        include/rtw_io.h
        include/rtw_ioctl.h
        include/rtw_ioctl_query.h
        include/rtw_ioctl_rtl.h
        include/rtw_ioctl_set.h
        include/rtw_iol.h
        include/rtw_mcc.h
        include/rtw_mem.h
        include/rtw_mi.h
        include/rtw_mlme.h
        include/rtw_mlme_ext.h
        include/rtw_mp.h
        include/rtw_mp_ioctl.h
        include/rtw_mp_phy_regdef.h
        include/rtw_odm.h
        include/rtw_p2p.h
        include/rtw_pwrctrl.h
        include/rtw_qos.h
        include/rtw_recv.h
        include/rtw_rf.h
        include/rtw_sdio.h
        include/rtw_security.h
        include/rtw_sreset.h
        include/rtw_tdls.h
        include/rtw_version.h
        include/rtw_vht.h
        include/rtw_wapi.h
        include/rtw_wifi_regd.h
        include/rtw_xmit.h
        include/sdio_hal.h
        include/sdio_ops.h
        include/sdio_ops_ce.h
        include/sdio_ops_linux.h
        include/sdio_ops_xp.h
        include/sdio_osintf.h
        include/sta_info.h
        include/usb_hal.h
        include/usb_ops.h
        include/usb_ops_linux.h
        include/usb_osintf.h
        include/usb_vendor_req.h
        include/wifi.h
        include/wlan_bssdef.h
        include/xmit_osdep.h
        os_dep/linux/custom_gpio_linux.c
        os_dep/linux/ioctl_cfg80211.c
        os_dep/linux/ioctl_cfg80211.h
        os_dep/linux/ioctl_linux.c
        os_dep/linux/ioctl_mp.c
        os_dep/linux/mlme_linux.c
        os_dep/linux/os_intfs.c
        os_dep/linux/recv_linux.c
        os_dep/linux/rtw_android.c
        os_dep/linux/rtw_cfgvendor.c
        os_dep/linux/rtw_cfgvendor.h
        os_dep/linux/rtw_proc.c
        os_dep/linux/rtw_proc.h
        os_dep/linux/usb_intf.c
        os_dep/linux/usb_ops_linux.c
        os_dep/linux/wifi_regd.c
        os_dep/linux/xmit_linux.c
        os_dep/osdep_service.c
        platform/custom_country_chplan.h
        platform/platform_arm_act_sdio.c
        platform/platform_ARM_SUN50IW1P1_sdio.c
        platform/platform_ARM_SUNnI_sdio.c
        platform/platform_ARM_SUNxI_sdio.c
        platform/platform_ARM_SUNxI_usb.c
        platform/platform_ARM_WMT_sdio.c
        platform/platform_ops.c
        platform/platform_ops.h
        platform/platform_RTK_DMP_usb.c
        platform/platform_sprd_sdio.c)
